<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_light">

   <LinearLayout
       android:layout_width="match_parent"
...
                   android:layout_height="50dp"
                   app:cardCornerRadius="25dp"
                   android:clipToPadding="true"
                   android:clipChildren="true" >

                   <ImageView
                       android:id="@+id/iv_event_poster_img"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:src="@drawable/yoga"
                       android:scaleType="centerCrop"/>
               </androidx.cardview.widget.CardView>

...
