...
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:orientation="vertical"-->
<!--                    android:gravity="center_horizontal">-->

<!--                    <ImageView-->
<!--                        android:id="@+id/iv_event_poster"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:src="@drawable/ic_upload_24dp_000000_fill0_wght400_grad0_opsz24"-->
<!--                        app:tint="@color/text_secondary" />-->

<!--                    <TextView-->
...
